--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -54,4 +54,6 @@
     <div class="col-md-2"></div>
 </div>
 
-<ngx-spinner type="ball-scale-multiple"></ngx-spinner>
+<ngx-spinner name="s1" size="medium" type="ball-atom"></ngx-spinner>
+<ngx-spinner name="s2" size="medium" type="ball-scale-multiple"></ngx-spinner>
+<ngx-spinner name="s3" size="medium" type="square-jelly-box"></ngx-spinner>
